@@ -1,6 +1,6 @@
 /*
  * ******************************************************************************
- * Copyright (c) 2021,2023 Contributors to the Eclipse Foundation
+ * Copyright (c) 2021,2024 Contributors to the Eclipse Foundation
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information regarding copyright ownership.
@@ -25,19 +25,22 @@ import java.net.URI;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
-import org.eclipse.tractusx.ssi.lib.exception.DidParseException;
+import org.eclipse.tractusx.ssi.lib.exception.did.DidParseException;
 
 /** The type Did parser. */
 public class DidParser {
 
+  private DidParser() {
+    // static
+  }
+
   /**
-   * Parse did.
+   * Parse did from URI.
    *
    * @param uri the uri
    * @return the did
    */
-  public static Did parse(URI uri) {
+  public static Did parse(URI uri) throws DidParseException {
     Objects.requireNonNull(uri);
 
     if (!uri.getScheme().equals("did")) {
@@ -57,7 +60,7 @@ public class DidParser {
           "DID does not contain at least three parts split by ':'. URI: '" + did + "'");
     }
 
-    List<String> methodIdentifierParts = Arrays.stream(did).skip(2).collect(Collectors.toList());
+    List<String> methodIdentifierParts = Arrays.stream(did).skip(2).toList();
 
     return new Did(
         new DidMethod(did[1]),
@@ -66,12 +69,12 @@ public class DidParser {
   }
 
   /**
-   * Parse did.
+   * Parse did from String.
    *
-   * @param did the did
+   * @param did the did String
    * @return the did
    */
-  public static Did parse(String did) {
+  public static Did parse(String did) throws DidParseException {
     Objects.requireNonNull(did);
 
     final URI uri;
